# PCO_Lab2

./: CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  compile_dynamic.sh
.github/workflows/: cmake.yml
0_bzip2_sample/: CMakeLists.txt  README.md  compile.sh
0_bzip2_sample/examples/: CMakeLists.txt  Makefile
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/benchmark_results/: benchmark-results_macos  benchmark-results_ubuntu
examples/: CMakeLists.txt  Makefile  README.md  example.cpp  example.txt
tests/: CMakeLists.txt  mystring_test.cpp
